After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694275 - auparse: src_caps are leaked
auparse: src_caps are leaked
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-20 14:54 UTC by Ognyan Tonchev (redstar_)
Modified: 2013-02-21 19:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unref src_caps in dispose (684 bytes, patch)
2013-02-20 14:54 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2013-02-20 14:54:12 UTC
Created attachment 236939 [details] [review]
unref src_caps in dispose

There is a memory leak in gstauparse, the src_caps are leaked
Comment 1 Tim-Philipp Müller 2013-02-21 19:33:57 UTC
Thanks!

Moved this into the _reset() function so the element can properly be re-used (when setting state to NULL the current caps on the src pad get flushed, so we must make sure to gst_pad_set_caps() again even if the new caps are the same as the saved ones).


commit 42d8b96f2d2824cf8126526e4966f2144e82e537
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Feb 20 15:46:43 2013 +0100

    auparse: do not leak src_caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=694275
Comment 2 Tim-Philipp Müller 2013-02-21 19:35:08 UTC
Comment on attachment 236939 [details] [review]
unref src_caps in dispose

pushed in modified form.