auparse: do not leak src_caps

https://bugzilla.gnome.org/show_bug.cgi?id=694275